added pdf viewer

--- a/Almaari/wardrobe-organizer.html
+++ b/Almaari/wardrobe-organizer.html
@@ -79,6 +79,7 @@
               alt="Almaari"
               class="w-20 h-20"
             />
+
             <h1 class="text-3xl md:text-5xl font-bold mb-4">
               Wardrobe Organizer
             </h1>
@@ -156,7 +157,9 @@
                 their clothes.
               </p>
               <p>- Label the type of clothing, color, and style.</p>
-              <p>- Image background are removed and saved to AWS S3.</p>
+              <p>
+                - Image background are removed using OpenCV and saved to AWS S3.
+              </p>
             </div>
             <div class="flex gap-4"></div>
           </div>
@@ -222,6 +225,31 @@
 
       <!-- README Highlights -->
       <section id="readme-section" class="mt-12 space-y-8 hidden">
+        <div class="glass-card p-6 rounded-2xl reveal-on-scroll">
+          <h2 class="text-2xl font-semibold mb-2">
+            Technical Highlights (PDF)
+          </h2>
+          <p class="opacity-80 mb-4">
+            Prefer a concise, printable walkthrough? View the PDF version of the
+            technical highlights with architecture notes, schemas, and pipeline
+            diagrams.
+          </p>
+          <div class="flex flex-wrap gap-3">
+            <a
+              href="Manveer_Sohal_AlmaariOrganizer_WorkExample.pdf"
+              target="_blank"
+              rel="noopener"
+              class="px-4 py-2 bg-indigo-600 rounded-lg hover:bg-indigo-700"
+              >View PDF</a
+            >
+            <a
+              href="Manveer_Sohal_AlmaariOrganizer_WorkExample.pdf"
+              download
+              class="px-4 py-2 border border-indigo-400 rounded-lg hover:bg-indigo-900"
+              >Download PDF</a
+            >
+          </div>
+        </div>
         <div class="glass-card p-6 rounded-2xl reveal-on-scroll mb-4">
           <h2 class="text-2xl font-semibold mb-3">
             Key Features & Contributions
