added alert and message for disabled backend in creator control room

--- a/creator-control-room/creator-control-room.html
+++ b/creator-control-room/creator-control-room.html
@@ -91,12 +91,15 @@
           </div>
           <div class="flex gap-4">
             <a
+              onclick="alert('Backend is currently disabled due to cost reasons.'); return false;"
               href="https://creator-control-room.vercel.app/login"
               target="_blank"
               rel="noopener"
               class="px-4 py-2 bg-indigo-600 rounded-lg hover:bg-indigo-700"
+              disabled
               >Live Demo</a
             >
+            <p class="text-red-500">(Backend is currently disabled due to cost reasons.)</p>
           </div>
         </div>
       </div>
